RESOLVED FIXED234410
REGRESSION (r286944?): web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click tests have become flaky failures
https://bugs.webkit.org/show_bug.cgi?id=234410
Summary REGRESSION (r286944?): web-platform-tests/html/semantics/text-level-semantics...
Ryan Haddad
Reported 2021-12-16 17:05:45 PST
The following two tests have become flaky failures on iOS and macOS, both having an unexpected "+Download size: 0." appear in their diffs. imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click.html https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Ftext-level-semantics%2Fthe-a-element%2Fa-download-click-404.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Ftext-level-semantics%2Fthe-a-element%2Fa-download-click.html The change "Fix ServiceWorker downloads" (https://trac.webkit.org/changeset/286944/webkit) landed a few revisions before the first failure, and it added "test runner API to log the total download size", so it seems related.
Attachments
Radar WebKit Bug Importer
Comment 1 2021-12-16 18:26:03 PST
Robert Jenner
Comment 4 2022-01-21 13:55:43 PST
Added expectations for all of these tests. We only initially observed the following two having a negative impact on EWS: imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe_sandbox_anchor_download_allow_downloads.tentative.ht' However, since these are all flaky on OpenSource I'm sure the other tests are probably also causing issues on EWS. Expectations added here: https://trac.webkit.org/changeset/288380/webkit
Ryan Haddad
Comment 5 2022-05-18 15:14:30 PDT
*** Bug 238469 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 6 2022-05-18 15:14:37 PDT
*** Bug 239546 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 7 2022-05-18 15:15:06 PDT
From dupes, this also affects imported/w3c/web-platform-tests/html/semantics/embedded-content/the-area-element/area-download-click.html mported/w3c/web-platform-tests/fetch/metadata/download.https.sub.html
youenn fablet
Comment 8 2022-06-23 03:34:11 PDT
EWS
Comment 9 2022-06-23 11:17:21 PDT
Committed 251789@main (765fc0d01283): <https://commits.webkit.org/251789@main> Reviewed commits have been landed. Closing PR #1723 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.