REGRESSION (r286944?): web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click tests have become flaky failures https://bugs.webkit.org/show_bug.cgi?id=234410

Reviewed by Chris Dumez.

Make sure to reset m_shouldLogDownloadSize when restarting a test.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/251789@main